k8s/k8s-backend.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-backend
    spec:
      containers:
        - name: k8s-backend
          image: k8s-backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "0.3"
              memory: "500Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: k8s-backend
spec:
  selector:
    app: k8s-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30060
  type: NodePort
