k8s/k8s-frontend.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
      - name: k8s-frontend
        image: k8s-frontend
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        command: ["/usr/share/nginx/html/env-runtime.sh"]
        args: ["-c", "$(SERVER_ENDPOINT)" ]
        resources:
          requests:          
            cpu: "0.3"
            memory: "500Mi"

        # - name: k8s-backend
        #   image: k8s-backend
        #   imagePullPolicy: IfNotPresent
        #   ports:
        #     - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: k8s-frontend
spec:
  selector:
    app: k8s-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30050
  type: NodePort
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: k8s-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
  - host: k8s-frontend.com
    http:
      paths:
      - backend:
          serviceName: k8s-frontend
          servicePort: 80
        path: /*
